--- a/SleepTracker/src/app/logged-sleep-data/logged-sleep-data.page.html
+++ b/SleepTracker/src/app/logged-sleep-data/logged-sleep-data.page.html
@@ -11,19 +11,23 @@
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-card *ngFor="let data of overnightSleepData" class="sleep-card">
-    <ion-card-header>
-      <ion-card-title>{{ data.summaryString() }}</ion-card-title>
-      <ion-card-subtitle>{{ data.dateString() }}</ion-card-subtitle>
-    </ion-card-header>
-
-    <ion-card-content>
+    <ion-card-content class="card-content">
+      <ion-card-header>
+        <ion-card-title>{{ data.summaryString() }}</ion-card-title>
+        <ion-card-subtitle>{{ data.dateString() }}</ion-card-subtitle>
+      </ion-card-header>
+  
       <p>Logged At: {{ data.loggedAt | date: 'MMM d, yyyy, h:mm a' }}</p>
-      <ion-button (click)="shareData(data)" fill="outline" color="primary">
-        Share
-      </ion-button>
-      <ion-button (click)="deleteData(data)" fill="outline" color="danger">
-        Delete
-      </ion-button>
     </ion-card-content>
+  
+    <ion-footer class="card-buttons">
+      <ion-button (click)="shareData(data)" fill="outline" color="primary" size="small">
+        <ion-icon slot="icon-only" name="share"></ion-icon>
+      </ion-button>
+      <ion-button (click)="deleteData(data)" fill="outline" color="danger" size="small">
+        <ion-icon slot="icon-only" name="trash"></ion-icon>
+      </ion-button>
+    </ion-footer>
   </ion-card>
 </ion-content>
+
