--- a/SleepTracker/src/app/tab2/tab2.page.html
+++ b/SleepTracker/src/app/tab2/tab2.page.html
@@ -2,7 +2,7 @@
 <ion-app>
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title>
+      <ion-title class="center-title">
         Sleep
       </ion-title>
     </ion-toolbar>
