--- a/SleepTracker/src/app/logged-sleepiness-data/logged-sleepiness-data.page.scss
+++ b/SleepTracker/src/app/logged-sleepiness-data/logged-sleepiness-data.page.scss
@@ -2,6 +2,9 @@
     margin-bottom: 16px;  
     border-radius: 8px;  
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  
+    display: flex;
+    flex-direction: column;
+    padding: 20px 16px;
   
     ion-card-header {
       background-color: #f5f5f5; 
@@ -13,4 +16,14 @@
       padding: 16px;  
     }
   }
+  
+  .card-buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+  
+  
+.card-content {
+    flex-grow: 1;
+}
   
