--- a/SleepTracker/src/app/tab3/tab3.page.scss
+++ b/SleepTracker/src/app/tab3/tab3.page.scss
@@ -1,4 +1,8 @@
-ion-item.ion-margin {
+ion-content {
+    --ion-background-color: #f4f4f4;  
+}
+
+  ion-item.ion-margin {
     margin-top: 20px; 
     margin-bottom: 20px;  
     align-items: center;
