--- a/SleepTracker/src/app/logged-sleepiness-data/logged-sleepiness-data.page.scss
+++ b/SleepTracker/src/app/logged-sleepiness-data/logged-sleepiness-data.page.scss
@@ -1,11 +1,19 @@
+ion-content {
+    --ion-background-color: #f4f4f4;  
+}
+
 .sleepiness-card {
+    margin: 24px;
     margin-bottom: 16px;  
     border-radius: 8px;  
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  
     display: flex;
     flex-direction: column;
     padding: 20px 16px;
-  
+    background-color: white;
+    border-radius: 10px;
+
+ 
     ion-card-header {
       background-color: #f5f5f5; 
       border-bottom: 1px solid #ddd;  
@@ -20,6 +28,7 @@
   .card-buttons {
     display: flex;
     justify-content: flex-end;
+    box-shadow: none;
 }
   
   
