--- a/SleepTracker/src/app/tab2/tab2.page.scss
+++ b/SleepTracker/src/app/tab2/tab2.page.scss
@@ -1,3 +1,7 @@
+ion-content {
+    --ion-background-color: #f4f4f4;  
+}
+
 ion-item.ion-margin {
     margin-top: 20px; 
     margin-bottom: 40px;  
